Update to isDisabled class, fix width, fix tooltip not showing on disabled

--- a/frontend/pages/SoftwarePage/SoftwareVulnerabilities/SoftwareVulnerabilitiesTable/_styles.scss
+++ b/frontend/pages/SoftwarePage/SoftwareVulnerabilities/SoftwareVulnerabilitiesTable/_styles.scss
@@ -1,6 +1,6 @@
 .software-vulnerabilities-table {
   &__exploited-vulnerabilities-dropdown {
-    min-width: 234px;
+    min-width: 250px;
   }
 
   &__count {
